--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
+        <li>Kubernetes</li>
         <li>Integração Contiinua: Maturidade e Produtividade</li>
     </ul>
 </body>
