--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Docker: Criando Containers sem dor de cabeca</li>
         <li>Ansible</li>
         <li>Kubernetes</li>
         <li>Integração Contiinua: Maturidade e Produtividade</li>
