--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant: Criando maquinas virtuais</li>
         <li>Docker: Criando containers</li>
-        <li>Ansible: Integracao de Cursos</li>
+        <li>Ansible: Teste</li>
         <li>Kubernetes</li>
         <li>Integração Contiinua: Maturidade e Produtividade</li>
     </ul>
