Alterando curso de Kubernetes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Vagrant: Criando maquinas virtuais</li>
         <li>Docker: Criando containers</li>
         <li>Ansible: Teste</li>
-        <li>Kubernetes</li>
+        <li>Kubernetes: Introducao de containers</li>
         <li>Integração Contiinua: Maturidade e Produtividade</li>
     </ul>
 </body>
