Alterando marcador de lista e Separando os titulos

--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
 </head>
 <body>
     <h1>Cursos de DevOps</h1>
-    
-    <ul>
-        <li>Vagrant: Criando maquinas virtuais</li>
-        <li>Docker: Criando containers</li>
-        <li>Ansible: Sua infraestrutura como codigo</li>
-        <li>Kubernetes: Introducao de containers</li>
-        <li>Integração Contiinua: Maturidade e Produtividade</li>
-    </ul>
+
+    <dl>
+        <dt>Vagrant</dt>
+        <dd>Criando maquinas virtuais</dd>
+
+        <dt>Docker</dt>
+        <dd>Criando containers</dd>
+
+        <dt>Ansible</dt>
+        <dd>Sua infraestrutura como codigo</dd>
+
+        <dt>Kubernetes</dt>
+        <dd>Introducao de containers</dd>
+        
+        <dt>Integração Contiinua</dt>
+        <dd>Maturidade e Produtividade</dd>
+    </dl>
 </body>
 </html>
